--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Backend Service Template",
   "main": "src/server.js",
   "scripts": {
-    "dev": "node src/server.ts"
+    "dev": "node src/server.ts",
+    "format:check": "npx prettier . --check",
+    "format:fix": "npx prettier . --write"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,7 @@
   "homepage": "https://github.com/tech-manthan/backend-service-template#readme",
   "devDependencies": {
     "@types/node": "^24.2.1",
+    "prettier": "3.6.2",
     "typescript": "^5.9.2"
   }
 }
