--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@eslint/js": "^9.33.0",
     "@types/node": "^24.2.1",
     "eslint": "^9.33.0",
+    "eslint-config-prettier": "^10.1.8",
     "prettier": "3.6.2",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.39.0"
