--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@types/express": "^5.0.3",
+    "@types/http-errors": "^2.0.5",
     "@types/node": "^24.2.1",
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
@@ -44,6 +45,8 @@
   "dependencies": {
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "http-errors": "^2.0.0",
+    "uuid": "^11.1.0",
     "winston": "^3.17.0"
   }
 }
