--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "dist/server.js",
   "scripts": {
     "dev": "nodemon src/server.ts",
+    "build": "tsc -p tsconfig.build.json",
+    "test": "jest --watch --runInBand",
     "format:check": "npx prettier . --check",
     "format:fix": "npx prettier . --write",
     "lint:check": "npx eslint .",
@@ -25,13 +27,16 @@
     "@eslint/js": "^9.33.0",
     "@types/express": "^5.0.3",
     "@types/http-errors": "^2.0.5",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.2.1",
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
     "husky": "^9.1.7",
+    "jest": "^30.0.5",
     "lint-staged": "^16.1.5",
     "nodemon": "^3.1.10",
     "prettier": "3.6.2",
+    "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.39.0"
@@ -43,9 +48,11 @@
     ]
   },
   "dependencies": {
+    "@types/supertest": "^6.0.3",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "http-errors": "^2.0.0",
+    "supertest": "^7.1.4",
     "uuid": "^11.1.0",
     "winston": "^3.17.0"
   }
