--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "Backend Service Template",
   "main": "dist/server.js",
   "scripts": {
-    "dev": "nodemon src/server.ts",
+    "dev": "cross-env NODE_ENV=dev nodemon src/server.ts",
     "build": "tsc -p tsconfig.build.json",
     "test": "jest --watch --runInBand",
     "format:check": "npx prettier . --check",
     "format:fix": "npx prettier . --write",
     "lint:check": "npx eslint .",
     "lint:fix": "npx eslint . --fix",
-    "prepare": "husky"
+    "prepare": "husky",
+    "start": "ts-node src/index.ts",
+    "typeorm": "typeorm-ts-node-commonjs"
   },
   "repository": {
     "type": "git",
@@ -49,10 +51,14 @@
   },
   "dependencies": {
     "@types/supertest": "^6.0.3",
+    "cross-env": "^10.0.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "http-errors": "^2.0.0",
+    "pg": "^8.14.1",
+    "reflect-metadata": "^0.2.2",
     "supertest": "^7.1.4",
+    "typeorm": "0.3.25",
     "uuid": "^11.1.0",
     "winston": "^3.17.0"
   }
