--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "cross-env": "^10.0.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
     "http-errors": "^2.0.0",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
