--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/express": "^5.0.3",
     "@types/http-errors": "^2.0.5",
     "@types/jest": "^30.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.2.1",
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
@@ -58,6 +59,7 @@
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
     "supertest": "^7.1.4",
