--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@types/bcrypt": "^6.0.0",
+    "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.3",
     "@types/http-errors": "^2.0.5",
     "@types/jest": "^30.0.0",
@@ -38,8 +39,10 @@
     "husky": "^9.1.7",
     "jest": "^30.0.5",
     "lint-staged": "^16.1.5",
+    "mock-jwks": "^3.3.5",
     "nodemon": "^3.1.10",
     "prettier": "3.6.2",
+    "rsa-pem-to-jwk": "^1.1.3",
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
@@ -54,12 +57,15 @@
   "dependencies": {
     "@types/supertest": "^6.0.3",
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cross-env": "^10.0.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-jwt": "^8.5.1",
     "express-validator": "^7.2.1",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.2.0",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
     "supertest": "^7.1.4",
