--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -3,9 +3,9 @@
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
-    "noEmit": false,
-    "declaration": true,
-    "declarationMap": true
+    "noEmit": false
+    // "declaration": true,
+    // "declarationMap": true
   },
   "include": ["src"],
   "exclude": ["tests", "dist", "node_modules"]
