--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,6 +25,7 @@ jobs:
         run: npm run test
 
         env:
+          NODE_OPTIONS: --dns-result-order=ipv4first
           DB_HOST: ${{ secrets.TEST_DB_HOST }}
           DB_PORT: ${{ secrets.TEST_DB_PORT }}
           DB_USERNAME: ${{ secrets.TEST_DB_USERNAME }}
