--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,8 @@ DB_NAME=
 REFRESH_TOKEN_SECRET=
 JWKS_URI=
 PRIVATE_KEY=
+ADMIN_EMAIL=
+ADMIN_PASSWORD=
+ADMIN_FIRSTNAME=
+ADMIN_LASTNAME=
+MERNSPACE_DASHBOARD_URI=
